--- a/index.html
+++ b/index.html
@@ -9,7 +9,117 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
-    
+    <header class="">
+        <nav class="container text-center">
+            <p class="title display-1">Weather-App</p>
+        </nav>      
+    </header>
+
+    <section class="body row">
+        <!-- This will show the search bar and history -->
+        <section class="search-section col-4">
+
+                <form class="form-inline">
+                  <input class="form-control mr-sm-2" type="search" placeholder="Enter your city" aria-label="Search">
+                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+                
+                <div class="card" style="width: 18rem;">
+                    <div class="card-header">
+                      Searched Cities
+                    </div>
+                    <ul class="list-group list-group-flush">
+                      <li class="list-group-item">An item</li>
+                      <li class="list-group-item">A second item</li>
+                      <li class="list-group-item">A third item</li>
+                    </ul>
+                  </div>
+
+        </section>
+
+        <section class="display-section d-flex flex-column col-8">
+                <!-- This will show current day -->
+            <div class="current-day align-self-center">
+                <div class="card " style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">City Name</h5>
+                      <p class="card-text">Current Date: 00/00/0000</p>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                      <li class="list-group-item temperature">Temperature</li>
+                      <li class="list-group-item humidty">Humidity</li>
+                      <li class="list-group-item wind">Wind Speed</li>
+                    </ul>
+                  </div>
+            </div>
+
+              <!-- this will show the future 5 days -->
+              <div class="next-days">
+                  <div class="card-group">
+                    <div class="card">
+                      <img src="..." class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Tomorrow</h5>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item temperature">Temperature</li>
+                            <li class="list-group-item humidty">Humidity</li>
+                            <li class="list-group-item wind">Wind Speed</li>
+                          </ul>
+                      </div>
+                    </div>
+                    <div class="card">
+                      <img src="..." class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Tomorrow + 1</h5>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item temperature">Temperature</li>
+                            <li class="list-group-item humidty">Humidity</li>
+                            <li class="list-group-item wind">Wind Speed</li>
+                          </ul>
+                      </div>
+                    </div>
+                    <div class="card">
+                      <img src="..." class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Tomorrow + 2</h5>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item temperature">Temperature</li>
+                            <li class="list-group-item humidty">Humidity</li>
+                            <li class="list-group-item wind">Wind Speed</li>
+                          </ul>
+                      </div>
+                    </div>
+                    <div class="card">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Tomorrow + 3</h5>
+                          <ul class="list-group list-group-flush">
+                            <li class="list-group-item temperature">Temperature</li>
+                            <li class="list-group-item humidty">Humidity</li>
+                            <li class="list-group-item wind">Wind Speed</li>
+                          </ul>
+                        </div>
+                      </div>
+                      <div class="card">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Tomorrow + 4</h5>
+                          <ul class="list-group list-group-flush">
+                            <li class="list-group-item temperature">Temperature</li>
+                            <li class="list-group-item humidty">Humidity</li>
+                            <li class="list-group-item wind">Wind Speed</li>
+                          </ul>
+                        </div>
+                      </div>
+                  </div>
+              </div>
+
+        </section>
+
+    </section>
+
+    <!--____________________ Scripts__________________________-->
     <script src="./Assets/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
