--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <!-- This will show current day -->
             <div class="current-day align-self-center">
                 <div class="card " style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="" class="card-img-top" alt="">
                     <div class="card-body">
                       <h5 class="card-title">City Name</h5>
                       <p class="card-text">Current Date: 00/00/0000</p>
@@ -58,7 +58,7 @@
               <div class="next-days">
                   <div class="card-group">
                     <div class="card">
-                      <img src="..." class="card-img-top" alt="...">
+                      <img src="" class="card-img-top" alt="">
                       <div class="card-body">
                         <h5 class="card-title">Tomorrow</h5>
                         <ul class="list-group list-group-flush">
@@ -69,7 +69,7 @@
                       </div>
                     </div>
                     <div class="card">
-                      <img src="..." class="card-img-top" alt="...">
+                      <img src="" class="card-img-top" alt="">
                       <div class="card-body">
                         <h5 class="card-title">Tomorrow + 1</h5>
                         <ul class="list-group list-group-flush">
@@ -80,7 +80,7 @@
                       </div>
                     </div>
                     <div class="card">
-                      <img src="..." class="card-img-top" alt="...">
+                      <img src="" class="card-img-top" alt="">
                       <div class="card-body">
                         <h5 class="card-title">Tomorrow + 2</h5>
                         <ul class="list-group list-group-flush">
@@ -91,7 +91,7 @@
                       </div>
                     </div>
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="" class="card-img-top" alt="">
                         <div class="card-body">
                           <h5 class="card-title">Tomorrow + 3</h5>
                           <ul class="list-group list-group-flush">
@@ -102,7 +102,7 @@
                         </div>
                       </div>
                       <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="" class="card-img-top" alt="">
                         <div class="card-body">
                           <h5 class="card-title">Tomorrow + 4</h5>
                           <ul class="list-group list-group-flush">
