--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
                     <div class="card-header">
                       Searched Cities
                     </div>
-                    <ul class="list-group list-group-flush">
-                      <li class="list-group-item">An item</li>
-                      <li class="list-group-item">A second item</li>
-                      <li class="list-group-item">A third item</li>
+                    <ul class="list-group list-group-flush search-history">
                     </ul>
                   </div>
 
@@ -41,15 +38,15 @@
                 <!-- This will show current day -->
             <div class="current-day align-self-center">
                 <div class="card " style="width: 18rem;">
-                    <img src="" class="card-img-top" alt="">
+                    <img src="" class="card-img-top icon-current" alt="">
                     <div class="card-body">
-                      <h5 class="card-title">City Name</h5>
-                      <p class="card-text">Current Date: 00/00/0000</p>
+                      <h5 class="card-title current-city">City Name</h5>
+                      <p class="card-text current-date">Date: </p>
                     </div>
                     <ul class="list-group list-group-flush">
-                      <li class="list-group-item temperature">Temperature</li>
-                      <li class="list-group-item humidty">Humidity</li>
-                      <li class="list-group-item wind">Wind Speed</li>
+                      <li class="list-group-item current-temp">Temperature</li>
+                      <li class="list-group-item current-humidity">Humidity</li>
+                      <li class="list-group-item current-wind">Wind Speed</li>
                     </ul>
                   </div>
             </div>
@@ -58,57 +55,52 @@
               <div class="next-days">
                   <div class="card-group">
                     <div class="card">
-                      <img src="" class="card-img-top" alt="">
+                      <img src="" class="card-img-top icon-day1" alt="">
                       <div class="card-body">
-                        <h5 class="card-title">Tomorrow</h5>
+                        <h5 class="card-title day1">Tomorrow</h5>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item temperature">Temperature</li>
-                            <li class="list-group-item humidty">Humidity</li>
-                            <li class="list-group-item wind">Wind Speed</li>
+                            <li class="list-group-item temperature day1-temp">Temperature</li>
+                            <li class="list-group-item humidty day1-humidity">Humidity</li>
                           </ul>
                       </div>
                     </div>
                     <div class="card">
-                      <img src="" class="card-img-top" alt="">
+                      <img src="" class="card-img-top icon-day2" alt="">
                       <div class="card-body">
-                        <h5 class="card-title">Tomorrow + 1</h5>
+                        <h5 class="card-title day2">Tomorrow + 1</h5>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item temperature">Temperature</li>
-                            <li class="list-group-item humidty">Humidity</li>
-                            <li class="list-group-item wind">Wind Speed</li>
+                            <li class="list-group-item temperature day2-temp">Temperature</li>
+                            <li class="list-group-item humidty day2-humidity">Humidity</li>
                           </ul>
                       </div>
                     </div>
                     <div class="card">
-                      <img src="" class="card-img-top" alt="">
+                      <img src="" class="card-img-top icon-day3" alt="">
                       <div class="card-body">
-                        <h5 class="card-title">Tomorrow + 2</h5>
+                        <h5 class="card-title day3">Tomorrow + 2</h5>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item temperature">Temperature</li>
-                            <li class="list-group-item humidty">Humidity</li>
-                            <li class="list-group-item wind">Wind Speed</li>
+                            <li class="list-group-item temperature day3-temp">Temperature</li>
+                            <li class="list-group-item humidty day3-humidity">Humidity</li>
                           </ul>
                       </div>
                     </div>
                     <div class="card">
-                        <img src="" class="card-img-top" alt="">
+                        <img src="" class="card-img-top icon-day4" alt="">
                         <div class="card-body">
-                          <h5 class="card-title">Tomorrow + 3</h5>
+                          <h5 class="card-title day4">Tomorrow + 3</h5>
                           <ul class="list-group list-group-flush">
-                            <li class="list-group-item temperature">Temperature</li>
-                            <li class="list-group-item humidty">Humidity</li>
-                            <li class="list-group-item wind">Wind Speed</li>
+                            <li class="list-group-item temperature day4-temp">Temperature</li>
+                            <li class="list-group-item humidty day4-humidity">Humidity</li>
                           </ul>
                         </div>
                       </div>
                       <div class="card">
-                        <img src="" class="card-img-top" alt="">
+                        <img src="" class="card-img-top icon-day5" alt="">
                         <div class="card-body">
-                          <h5 class="card-title">Tomorrow + 4</h5>
+                          <h5 class="card-title day5">Tomorrow + 4</h5>
                           <ul class="list-group list-group-flush">
-                            <li class="list-group-item temperature">Temperature</li>
-                            <li class="list-group-item humidty">Humidity</li>
-                            <li class="list-group-item wind">Wind Speed</li>
+                            <li class="list-group-item temperature day5-temp">Temperature</li>
+                            <li class="list-group-item humidty day5-humidity">Humidity</li>
                           </ul>
                         </div>
                       </div>
@@ -120,6 +112,7 @@
     </section>
 
     <!--____________________ Scripts__________________________-->
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
     <script src="./Assets/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
