--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./Assets/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-<body>
+<body class="">
     <header class="">
         <nav class="container text-center">
             <p class="title display-1">Weather-App</p>
@@ -38,7 +38,7 @@
                 <!-- This will show current day -->
             <div class="current-day align-self-center">
                 <div class="card " style="width: 18rem;">
-                    <img src="" class="card-img-top icon-current" alt="">
+                    <img src="" class="card-img-top icon-current float-left " alt="">
                     <div class="card-body">
                       <h5 class="card-title current-city">City Name</h5>
                       <p class="card-text current-date">Date: </p>
