Added wind speed, and updated README

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item temperature day1-temp">Temperature</li>
                             <li class="list-group-item humidty day1-humidity">Humidity</li>
+                            <li class="list-group-item wind day1-wind">Wind Speed</li>
                           </ul>
                       </div>
                     </div>
@@ -71,6 +72,7 @@
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item temperature day2-temp">Temperature</li>
                             <li class="list-group-item humidty day2-humidity">Humidity</li>
+                            <li class="list-group-item wind day2-wind">Wind Speed</li>
                           </ul>
                       </div>
                     </div>
@@ -81,6 +83,7 @@
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item temperature day3-temp">Temperature</li>
                             <li class="list-group-item humidty day3-humidity">Humidity</li>
+                            <li class="list-group-item wind day3-wind">Wind Speed</li>
                           </ul>
                       </div>
                     </div>
@@ -91,6 +94,7 @@
                           <ul class="list-group list-group-flush">
                             <li class="list-group-item temperature day4-temp">Temperature</li>
                             <li class="list-group-item humidty day4-humidity">Humidity</li>
+                            <li class="list-group-item wind day4-wind">Wind Speed</li>
                           </ul>
                         </div>
                       </div>
@@ -101,6 +105,7 @@
                           <ul class="list-group list-group-flush">
                             <li class="list-group-item temperature day5-temp">Temperature</li>
                             <li class="list-group-item humidty day5-humidity">Humidity</li>
+                            <li class="list-group-item wind day5-wind">Wind Speed</li>
                           </ul>
                         </div>
                       </div>
