--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
     <section class="body row bg-secondary">
         <!-- This will show the search bar and history -->
-        <section class="search-section col-4">
+        <section class="search-section col-md-12 col-lg-4 ">
 
-                <form class="form-inline">
-                  <input class="form-control mr-sm-2" type="search" placeholder="Enter your city" aria-label="Search">
+                <form class="form-inline search-nav">
+                  <input class="form-control mr-sm-2 searchbar" type="search" placeholder="Enter your city" aria-label="Search">
                   <button class="btn btn-outline-success my-2 my-sm-0 bg-white" type="submit">Search</button>
                 </form>
                 
-                <div class="card" style="width: 18rem;">
+                <div class="card history" style="width: 18rem;">
                     <div class="card-header">
                       Searched Cities
                     </div>
@@ -34,7 +34,7 @@
 
         </section>
 
-        <section class="display-section d-flex flex-column col-8 ">
+        <section class="display-section d-flex flex-column col-md-12 col-lg-8 ">
                 <!-- This will show current day -->
             <div class="current-day align-self-center">
                 <div class="card " style="width: 18rem;">
